--- a/cms_social_networks/templates/cms_social_networks/likebox.html
+++ b/cms_social_networks/templates/cms_social_networks/likebox.html
@@ -1,22 +1,10 @@
-{% load sekizai_tags %}
-
-{% addtoblock "js" %}
-<div id="fb-root"></div>
-
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) {return;}
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/es_ES/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-{% endaddtoblock %}
+{% include "cms_social_networks/_facebook_scripts.html" %}
 
 <div class="fb-like-box" data-href="{{ likebox.pageurl }}"{% if likebox.width %}
      data-width="{{ likebox.width }}"{% endif %}{% if likebox.height %}
      data-height="{{ likebox.height }}"{% endif %}
-     data-show-faces="{{ likebox.show_faces }}"
-     data-stream="{{ likebox.stream }}"
-     data-show-border="{{ likebox.border }}"
+     data-show-faces="{{ likebox.show_faces|lower }}"
+     data-stream="{{ likebox.stream|lower }}"
+     data-show-border="{{ likebox.border|lower }}"
      data-colorscheme="{{ likebox.color_scheme }}"
-     data-header="{{ likebox.header }}"></div>
+     data-header="{{ likebox.header|lower }}"></div>
