--- a/cms_social_networks/templates/cms_social_networks/_facebook_scripts.html
+++ b/cms_social_networks/templates/cms_social_networks/_facebook_scripts.html
@@ -1,4 +1,4 @@
-{% load sekizai_tags %}
+{% load sekizai_tags i18n %}
 
 {% addtoblock "body_top" %}
 <div id="fb-root"></div>
@@ -8,7 +8,7 @@
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) {return;}
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/es_ES/all.js#xfbml=1";
+  js.src = "//connect.facebook.net/{{ LANGUAGE_CODE }}/all.js#xfbml=1";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
