alignTo is not working right now

--- a/cms_social_networks/templates/cms_social_networks/google/plus-one.html
+++ b/cms_social_networks/templates/cms_social_networks/google/plus-one.html
@@ -14,5 +14,5 @@
      data-size="{{ plusone.size }}"
      data-annotation="{{ plusone.annotation }}"{% if plusone.width %}
      data-width="{{ plusone.width }}"{% endif %}
-     data-align="{{ plusone.align }}"{% if plusone.expandTo %}
-     data-expandTo="{{ plusone.expandTo }}"{% endif %}></div>
+     data-align="{{ plusone.align }}"{% comment %}{% if plusone.expandTo %}
+     data-expandTo="{{ plusone.expandTo }}"{% endif %}{% endcomment %}></div>
