fix href to data-href

--- a/cms_social_networks/templates/cms_social_networks/google/plus-one.html
+++ b/cms_social_networks/templates/cms_social_networks/google/plus-one.html
@@ -10,7 +10,7 @@
 {% endaddtoblock %}
 
 <div class="g-plusone"{% if plusone.url %}
-    href="{{ plusone.url }}"{% endif %}
+     data-href="{{ plusone.url }}"{% endif %}
      data-size="{{ plusone.size }}"
      data-annotation="{{ plusone.annotation }}"{% if plusone.width %}
      data-width="{{ plusone.width }}"{% endif %}
